--- a/environment.yml
+++ b/environment.yml
@@ -15,6 +15,7 @@ dependencies:
   - numpy
   - dask-ml
   - ydata-profiling
+  - dalex
   # interactive
   - ipykernel
   # plots
@@ -23,3 +24,15 @@ dependencies:
   - glum
   - lightgbm
   - scikit-learn
+  # pip-only
+  - pip:
+      - anyio==4.11.0
+      - h11==0.16.0
+      - hf-xet==1.2.0
+      - httpcore==1.0.9
+      - httpx==0.28.1
+      - huggingface-hub==1.1.5
+      - ps3==0.0.post2+gf2a516b48
+      - shellingham==1.5.4
+      - sniffio==1.3.1
+      - typer-slim==0.20.0
